--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -16,27 +16,30 @@
                 <div class="form-group row">
                     <label class="col-form-label col-4">E-mail</label>
                     <div class="col-8">
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" th:field="*{email}" required="true" minlength="5" maxlength="45" new-password="password">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label col-4">Password</label>
                     <div class="col-8">
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" th:field="*{password}" required="true" minlength="6" maxlength="10">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label col-4">First Name</label>
                     <div class="col-8">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" th:field="*{firstName}" required="true" minlength="2" maxlength="20">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label col-4">Last Name</label>
                     <div class="col-8">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" th:field="*{lastName}" required="true" minlength="2" maxlength="20">
                     </div>
                 </div>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Sing Up</button>
             </div>
         </form>
     </div>
